# CliRelay-Desktop

./: .gitignore  LICENSE  README.md  README_zh.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  upstream-lock.json  vite.config.ts
src/: App.css  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: panel.json  settings.json  shell.json
src-tauri/icons/: icon.icns
src-tauri/resources/: config.example.yaml
src-tauri/resources/panel/: manage.html
src-tauri/resources/panel/assets/: ApiKeyLookupPage-Clp4pe4L.js  ApiKeyPermissionsPage-DHQMc2ri.js  ApiKeysPage-ClvOTn-N.js  AppShell-DxtL7mWF.js  AuthFilesPage-CdOZNTBD.js  Card-BR240GuX.js  CcSwitchImportSettingsPage-CrpeZ8KX.js  ChannelGroupsPage-BQQ4A5hC.js  ChartLegend-uyF2PT9V.js  ConfigPage-DSYdA5Mh.js  ConfirmModal-DqtRGZfo.js  DashboardPage-Bl3yXWjC.js  DataTable-B4QIe_0m.js  EChartRenderer-_qPeEYIO.js  EmptyState-BDrn0DGC.js  IdentityFingerprintPage-C5nR5d1K.js  ImageGenerationPage-B1A3AcQ9.js  ImagePreviewOverlay-DauQPGac.js  LanguageSelector-2eNUDIHl.js  LogContentModal-DHOHa-B_.js  LoginPage-r8kNtdPQ.js  LogsPage-BsfQu_Vc.js  ModelsPage-CU0yXIRG.js  MonitorPage-B5YEx9g5.js  MonitorPagePieces-mQbVX9ds.js  PaginationBar-BUIsXdJp.js  ProviderStatusBar-DWE2gsm5.js  ProvidersPage-rz6kFDVm.js  ProxiesPage-DGvQL4SU.js  RequestLogsPage-CZ3o4DYS.js  ScrollArea-Bvy97Xvy.js  SearchableCheckboxMultiSelect-D7X0D625.js  SearchableSelect-CjL0Ravq.js  Select-suxUssx4.js  SystemPage-CLExwOZP.js  TableCellOverflowTooltip-BijNw62x.js  ToggleSwitch-DwTEXoyk.js  VendorIcon-eFaYqsRD.js  activity-Cm3NZWpV.js  (+54 more)
src-tauri/src/: bootstrap.rs  commands.rs  component_update.rs  lib.rs  main.rs  paths.rs  runtime_resources.rs  settings.rs  tray.rs  update_check.rs
src-tauri/src/platform/: macos.rs
src-tauri/src/service/: health.rs  logs.rs  manager.rs  mod.rs  ownership.rs  state.rs
src-tauri/src/windows/: main.rs  mod.rs  panel.rs  settings.rs
src-tauri/tests/: desktop_config.rs  service_manager.rs  update_check.rs
(+35 files in other folders)
