[package]
name = "clirelay-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "clirelay_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
libc = "0.2"
uuid = { version = "1", features = ["serde", "v4"] }
semver = "1"
sha2 = "0.10"
hex = "0.4"
url = { version = "2", features = ["serde"] }
ureq = { version = "2", features = ["json"] }
tar = "0.4"
flate2 = "1"
zip = "2"
tauri-plugin-dialog = "2"
